--- a/portfolio_website_km/package.json
+++ b/portfolio_website_km/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.13.0",
     "styled-components": "^5.3.9",
